# AI-Playground

./: .git-blame-ignore-revs  .gitignore  3rdpartynoticeslicenses.txt  AGENTS.md  AI_PLAYGROUND_MULTIMODAL_GUIDE.md  CONTRIBUTING.md  LICENSE  Port-OV-Models.md  blender-mcp.md  creative-multimodal-agent.md  notices-disclaimers.md  readme.md  readme.zh.md  workflows-document.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: 1-feature_request.md  2-bug_report.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: bandit.yml  build-installer.yml  eslint-prettier.yml  ruff.yml  stale.yml  trivy.yml
.opencode/: .gitignore  opencode.json
LlamaCPP/: .gitignore  llama_adapter.py  llama_cpp_backend.py  llama_cpp_embeddings.py  llama_cpp_test.py  llama_interface.py  llama_params.py  llama_rag.py  llama_web_api.py  model_config.py  requirements.txt
OpenVINO/: .gitignore  detect_devices.py  openvino_adapter.py  openvino_backend.py  openvino_embeddings.py  openvino_interface.py  openvino_model_config.py  openvino_params.py  openvino_rag.py  openvino_test.py  openvino_web_api.py  pyproject.toml  requirements.txt
WebUI/: .gitignore  .prettierignore  .prettierrc.json  agentic-debugging.md  components.json  eslint.config.ts  index.html  package-lock.json  package.json  postcss.config.cjs  tailwind.config.cjs  tsconfig.json  tsconfig.node.json  vite.config.mts  vite.config.ts  vitest.config.ts
WebUI/.opencode/: .gitignore  opencode.json
WebUI/.sisyphus/plans/: demo-mode-profile-descriptor.md
WebUI/electron/: aipgRoot.ts  demoProfile.ts  electron-env.d.ts  main.ts  pathsManager.ts  preload.ts  remoteUpdates.ts  tempFolderCleanup.ts  types.d.ts  util.ts
WebUI/electron/logging/: logger.ts
WebUI/electron/subprocesses/: aiBackendService.ts  apiService.ts  apiServiceRegistry.ts  backendVersionManager.ts  collectorService.ts  comfyUIBackendService.ts  comfyUiRevision.ts  comfyuiTools.ts  deviceArch.ts  deviceDetection.ts  deviceNvidia.ts  deviceUtils.ts  hardwareDiscovery.ts  homeAgentBackendService.ts  langchain.ts  linuxPackageInstaller.ts  llamaCppBackendService.ts  llamaCppPhison.ts  mcpManager.ts  mcpServers.ts  mediaServer.ts  ollamaBackendService.ts  openVINOBackendService.ts  osProcessHelper.ts  service.ts  tools.ts  updateIntelPresets.ts  updateIntelWorkflows.ts  webBrowserManager.ts
WebUI/electron/test/: comfyUiRevision.test.ts  demoProfile.test.ts  tempFolderCleanup.test.ts
WebUI/public/scripts/: collector.ps1
WebUI/public/tools/: collector.ps1
WebUI/scripts/: migrate-preset-images.js  migrate-workflows-to-presets.js
WebUI/src/: App.vue  auto-import.d.ts  env.d.ts  main.ts  toast.d.ts  vite-env.d.ts
WebUI/src/components/: AddLLMDialog.vue  AspectRatioPicker.vue  BackendOptions.vue  CameraCapture.vue  ChatActivityIndicator.vue  ChatConfirmation.vue  ChatInterface.vue  ChatMcpToolDisplay.vue  ChatReasoningDisplay.vue  ChatToolDisplay.vue  ChatWebBrowseDisplay.vue  ChatWorkflowResult.vue  Checkbox.vue  ComfyUIDownloadDialog.vue  ConversationManager.vue  DemoModeAutoresetDialog.vue  DemoModeBlocker.vue  DemoModeEnterConfirmDialog.vue  DemoModeIndicator.vue  DemoModeNotificationDot.vue  DemoModeNotificationDots.vue  DemoModeOverlayDriverJs.vue  DemoModePasscodeDialog.vue  DemoModeSettings.vue  DemoSamplePrompts.vue  DeviceSelector.vue  DownloadDialog.vue  DropDownNew.vue  DropDownWorkflow.vue  DropSelector.vue  ErrorDetailsModal.vue  FolderSelector.vue  HistoryChat.vue  HistoryImageEdit.vue  HistoryImageGen.vue  HistoryModal.vue  HistoryNewChat.vue  HistoryNewModal.vue  HistoryVideo.vue  HistoryWorkflow.vue  (+77 more)
WebUI/src/lib/: audioUtils.ts  etaEstimator.ts  loopbackAuth.ts  markdownToSpeech.ts  modelDownloader.ts  render3dThumbnail.ts  sanitize.ts  synthesizeSpeech.ts  transcribe.ts  utils.ts
WebUI/src/modes/: Chat.vue
WebUI/src/types/: shared.ts
WebUI/src/views/: Answer.vue  AppMetrics.vue  AppSettings.vue  Chat.vue  Create.vue  Enhance.vue  ImageEdit.vue  ImageGen.vue  LearnMore.vue  NewAppView.vue  NewUi.vue  (+3 more)
backend-shared/: __init__.py  adapter.py  config.py  interface.py  interface_adapter.py  params.py  utils.py
comfyui-deps/: pyproject-flexible-venv.toml  pyproject.toml
comfyui-deps/custom_nodes/OpenAICompatibleImageGen/: nodes.py
comfyui-deps/custom_nodes/OpenVINOImageUpscale/: nodes.py  rrdbnet.py
comfyui-deps/custom_nodes/SafetyChecker/: nodes.py
comfyui-deps/custom_nodes/aipg-auth/: __init__.py  middleware.py
docs/: comfyui-uv-migration.md  error-state-activity-architecture.md  linux-intel-gpu-setup.md
docs/arc42/: AI-PG_views.drawio  arc42_doc.md
docs/examples/: ComfyUICustomNodesManager.vue
gpuid/: gpuid.cpp
home-agent/: llm_proxy.py  pyproject.toml  web_api.py
home-agent/channels/: __init__.py  audio.py  base.py  commands.py  registry.py  slack.py  telegram.py  types.py
modes/essentials/: mode.json
modes/nvidia/: mode.json
modes/studio/: mode.json
offline/: .gitignore  README.md  create-offline-package.ps1  install_envs.ps1  play_loading_gif.ps1  setup_ai-backend-env.ps1  setup_all.ps1  setup_comfyui-env.ps1  setup_llamacpp-env.ps1  setup_ov-env.ps1
service/: .gitignore  aipg_utils.py  attention.py  build_dowloader.bat  comfyui_downloader.py  config.py  detect_hardware.py  device_detect.py  device_utils.py  downloader.py  env_setup.py  exceptions.py  file_downloader.py  inpaint_utils.py  ipex_backend.py  ipex_embedding.py  lama.py  llm_adapter.py  llm_biz.py  llm_interface.py  llm_params.py  main.py  metrics.py  model_config.json  model_config.py  model_download_adpater.py  model_downloader.py  move_model_files.py  outpaint_utils.py  paint_biz.py  pyproject.toml  rag.py  real_esrgan_patch.py  realesrgan.py  requirements-acm.txt  requirements-arc.txt  requirements-arl_h.txt  requirements-bmg.txt  requirements-ipex-llm.txt  requirements-lnl.txt  (+15 more)
service/static/assets/: hisotory_template.html  history.css  history.js  history_template.html
service/tests/: test_api.py  test_model_downloader.py
service/tools/: collector.ps1  ls_level_zero.cpp  move_model_files.py
(+240 files in other folders)
