[project]
name = "aipg-comfyui"
version = "0.3.66"
requires-python = "==3.12.*"
dependencies = [
  "comfyui-frontend-package==1.28.7",
  "comfyui-workflow-templates==0.2.1",
  "comfyui-embedded-docs==0.3.0",
  "torch>=2.9.0",
  "torchsde",
  "torchvision>=0.24.0",
  "torchaudio>=2.9.0",
  "numpy>=1.25.0",
  "einops",
  "transformers>=4.37.2",
  "tokenizers>=0.13.3",
  "sentencepiece",
  "safetensors>=0.4.2",
  "aiohttp>=3.11.8",
  "yarl>=1.18.0",
  "pyyaml",
  "Pillow",
  "scipy",
  "tqdm",
  "psutil",
  "alembic",
  "SQLAlchemy",
  "av>=14.2.0",
  "kornia>=0.7.1",
  "spandrel",
  "pydantic~=2.0",
  "pydantic-settings~=2.0",
]

[tool.uv]
python-preference = "only-managed"
link-mode = "clone"
no-build = true
index-strategy = "unsafe-best-match"
required-environments = [
  "sys_platform == 'win32'",
  "sys_platform == 'darwin'",
]

[tool.uv.sources]
torch = [{ index = "pytorch_xpu", marker = "sys_platform == 'win32'" },
         { index = "pytorch_cpu", marker = "sys_platform == 'darwin'" }]
torchaudio = [{ index = "pytorch_xpu", marker = "sys_platform == 'win32'" },
              { index = "pytorch_cpu", marker = "sys_platform == 'darwin'" }]
torchvision = [{ index = "pytorch_xpu", marker = "sys_platform == 'win32'" },
               { index = "pytorch_cpu", marker = "sys_platform == 'darwin'" }]

[[tool.uv.index]]
name = "pytorch_xpu"
url = "https://download.pytorch.org/whl/xpu"

[[tool.uv.index]]
name = "pytorch_cpu"
url = "https://download.pytorch.org/whl/cpu"
